package Prototype.ExternalAccomodationAdapter;

interface ServiceAdapter {
    void request();
}