@startuml

'Main not included'

class TripService {
    +void requestAvailability()
}

interface ServiceAdapter {
    +void request()
}

class ExternalAccommodationAdapter {
    -OldAPI oldAPI
    -NewAPI newAPI
    -boolean useOldAPI
    +ExternalAccommodationAdapter(oldAPI: OldAPI, newAPI: NewAPI)
    +void request()
    +void transformDataToOutput()
}

class OldBookingReviewAPI {
    +void externalRequest()
}

class NewBookingReviewAPI {
    +void externalRequest()
}

TripService --> ExternalAccommodationAdapter : requests availability
ExternalAccommodationAdapter --> OldBookingReviewAPI : queries if useOldAPI is true
ExternalAccommodationAdapter --> NewBookingReviewAPI : queries if useOldAPI is false
ServiceAdapter <|.. ExternalAccommodationAdapter

@enduml
